--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-gesture-handler": "~1.7.0",
     "react-native-paper": "^4.3.0",
     "react-native-reanimated": "~1.13.0",
+    "react-native-router-flux": "^4.2.0",
     "react-native-screens": "~2.10.1",
     "react-native-unimodules": "~0.11.0",
     "react-native-vector-icons": "^7.1.0",
