--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.3",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-interactive-image-gallery": "^0.1.2",
     "react-native-paper": "^4.3.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-router-flux": "^4.2.0",
