react navigation eklendi

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.2",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.0",
     "expo": "~39.0.2",
     "expo-splash-screen": "~0.6.2",
@@ -17,14 +21,16 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.3",
     "react-native-dotenv": "^2.4.3",
-    "react-native-gesture-handler": "^1.7.0",
+    "react-native-gesture-handler": "^1.9.0",
     "react-native-interactive-image-gallery": "^0.1.2",
+    "react-native-ionicons": "^4.6.5",
     "react-native-local-storage": "^1.5.2",
     "react-native-maps": "0.27.1",
     "react-native-paper": "^4.3.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-router-flux": "^4.2.0",
-    "react-native-screens": "~2.10.1",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.10.1",
     "react-native-tab-view": "^2.15.2",
     "react-native-unimodules": "~0.11.0",
     "react-native-vector-icons": "^7.1.0",
