--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
@@ -22,6 +23,7 @@
     "react-native": "~0.63.3",
     "react-native-dotenv": "^2.4.3",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-get-location": "^2.0.0",
     "react-native-interactive-image-gallery": "^0.1.2",
     "react-native-ionicons": "^4.6.5",
     "react-native-local-storage": "^1.5.2",
