--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: "com.android.application"
 
+/*import com.android.build.OutputFile
+*/
 import com.android.build.OutputFile
 
 /**
@@ -78,7 +80,7 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
-    enableHermes: false
+        enableHermes: false
 ]
 
 apply from: '../../node_modules/react-native-unimodules/gradle.groovy'
@@ -131,7 +133,7 @@ android {
     }
 
     defaultConfig {
-        manifestPlaceholders = [ mapsApiKey : "AIzaSyCgbKilqEjnzUREvvqUib9VgEbVI6RE8ro"]
+        manifestPlaceholders = [mapsApiKey: "AIzaSyCgbKilqEjnzUREvvqUib9VgEbVI6RE8ro"]
         applicationId "com.travelify2"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
@@ -188,16 +190,16 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-    debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
-      exclude group:'com.facebook.fbjni'
-    }
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0",
+            debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
+                exclude group: 'com.facebook.fbjni'
+            }
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
-        exclude group:'com.facebook.flipper'
-        exclude group:'com.squareup.okhttp3', module:'okhttp'
+        exclude group: 'com.facebook.flipper'
+        exclude group: 'com.squareup.okhttp3', module: 'okhttp'
     }
     debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}") {
-        exclude group:'com.facebook.flipper'
+        exclude group: 'com.facebook.flipper'
     }
     addUnimodulesDependencies()
 
