--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
-
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -106,3 +105,6 @@ dist
 
 android/
 ios/
+
+my-keystore.keystore
+.bin
